part 1 of making amounts be tuples
